--- a/themes/magicpuddle/README
+++ b/themes/magicpuddle/README
@@ -1,3 +1,1 @@
-Background images:
-    Mikael Eriksson <mikael_eriksson@miffe.org>
-    Licensed under CC-BY-SA-3.0
+This theme is based off the orginal awesome wm GTK theme
